--- a/Drone_Website.html
+++ b/Drone_Website.html
@@ -56,7 +56,7 @@
           <p>Drones are used for search and rescue efforts especially in wooded and/or mountainous areas.  These drones are equiped with thermal cameras so that it is easier to spot the person even if they arent moving around. </p>
           <hr>
           <h2>Land Surveying</h2>
-          <p></p>
+          <p>Recently, land surveying companies have started using drones for land surveying.  Drones are very efficient for this job because they can be programeed to fly a set of waypoints and automatically take the pictures needed to create a 3D model of the area.  </p>
           
           <hr>
           <h2>Military Drones</h2>
