--- a/ConsumerDrones.html
+++ b/ConsumerDrones.html
@@ -14,7 +14,7 @@
                <ul class="nav navbar-nav">
                   <li><a href="Drone_Website.html">Home</a></li>
                   <li><a href="#">Misconceptions about Drones</a></li>
-                  <li class="active"><a href="ConsumerDrones.html">More Info about Consumer Drones</a></li>
+                  <li class="active"><a href="ConsumerDrones.html">Consumer Drones</a></li>
                   <li><a href="#">Photo Gallery</a></li>
                </ul>
             </div>
