--- a/ConsumerDrones.html
+++ b/ConsumerDrones.html
@@ -9,16 +9,18 @@
       </style>
       <head>
          <h1>Consumer Drones</h1>
-         <nav class="navbar navbar-default">
-            <div class="container">
-               <ul class="nav navbar-nav">
-                  <li><a href="Drone_Website.html">Home</a></li>
-                  <li><a href="#">Misconceptions about Drones</a></li>
-                  <li class="active"><a href="ConsumerDrones.html">Consumer Drones</a></li>
-                  <li><a href="#">Photo Gallery</a></li>
-               </ul>
-            </div>
-         </nav>
+         <nav class="navbar navbar-default">   
+  <div class="container">
+    <ul class="nav navbar-nav">
+      <li><a href="index.html">Home</a></li>
+      <li class="active"><a href="ConsumerDrones.html">Consumer Drones</a></li>
+      <li><a href="Emercency_Service_Drones.html">Emergency Service Drones</a></li>
+        <li><a href="Land_Surveying.html">Land Surveying Drones</a></li> 
+    <li><a href="Military_Drones.html">Military Drones</a></li>
+   </ul>
+  </div>
+</nav>
+    
    </head>
    <body>
        <h2>Photography Drones</h2>
