--- a/Emercency_Service_Drones.html
+++ b/Emercency_Service_Drones.html
@@ -21,13 +21,16 @@
       <nav class="navbar navbar-default">   
   <div class="container">
     <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Home</a></li>
-      <li><a href="#">Misconceptions about Drones</a></li>
-      <li><a href="ConsumerDrones.html">More Info about Consumer Drones</a></li>
-      <li><a href="#">Photo Gallery</a></li> 
-    </ul>
+      <li><a href="index.html">Home</a></li>
+      
+      <li><a href="ConsumerDrones.html">Consumer Drones</a></li>
+      <li class="active"><a href="Emercency_Service_Drones.html">Emergency Service Drones</a></li>
+        <li><a href="Land_Surveying.html">Land Surveying Drones</a></li> 
+    <li><a href="Military_Drones.html">Military Drones</a></li>
+   </ul>
   </div>
 </nav>
+    
        <h2>Emercency Service Drones</h2>
           <p>Recently drones have been being used in many more ways than ever thought possible.  Drones are now used for firefighting, law enforcement, and search and rescue.  The Inspire 1 is also cost effective as it is around $2,500 which isnt too bad for the functions of a quality drone like the Inspire.</p>  
               <h4>Firefighting Drones</h4>
