--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
       <nav class="navbar navbar-default">   
   <div class="container">
     <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Home</a></li>
+      <li class="active"><a href="index.html">Home</a></li>
       
       <li><a href="ConsumerDrones.html">Consumer Drones</a></li>
-      <li><a href="#">Emergency Service Drones</a></li>
-        <li><a href="#">Land Surveying Drones</a></li> 
-    <li><a href="#">Military Drones</a></li>
+      <li><a href="Emercency_Service_Drones.html">Emergency Service Drones</a></li>
+        <li><a href="Land_Surveying.html">Land Surveying Drones</a></li> 
+    <li><a href="Military_Drones.html">Military Drones</a></li>
    </ul>
   </div>
 </nav>
