--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
             <img align="left" src="website_pics/P3A.JPG" alt="Phantom 3 Advanced" style="width:100%;height:100%;border: 30px;">    
           </div>
           <div class="col-xs-5">
-           <h3>Photography Drones</h3>
-              <p>The Phantom 3 Advanced is a consumer level drone that has a 12 mp camera and 2.7k video recording.  The phantom 3 series by DJI is a consumer type drone series for entry level drone photography.  </p>
+           <h2>Photography Drones</h2>
+              <button type="button"><a href="ConsumerDrones.html">Click Me!</a></button> 
           
           </div>
           <div class="col-xs-1">
