--- a/ConsumerDrones.html
+++ b/ConsumerDrones.html
@@ -8,7 +8,7 @@
       <style>
       </style>
       <head>
-         <h1>Consumer Drones</h1>
+         <h1>Drones</h1>
          <nav class="navbar navbar-default">   
   <div class="container">
     <ul class="nav navbar-nav">
@@ -23,7 +23,7 @@
     
    </head>
    <body>
-       <h2>Photography Drones</h2>
+       <h2>Photgraphy Drones</h2>
           <h4>Consumer Level</h4>
          <p>Photography drones are quadcopters that are used to take pictures and videos.  These drones are becoming more and more common as the drones become easier to manage.  There are many companies that manufacture consumer level drones including DJI, Yuneec, and many more.  These companies produce quality drones that can be flown by the average person.  Many photography companies use drones to film weddings and other special events.  They use drones because of the special perspective that they capture.  The technology that photography drones have is amazing.  For example, the higher end consumer level drones can fly around 3 miles away while streaming video back to the pilot's phone.  These drones also use gps to make the flight even easier because the drone will hold its position when you let off the thumb sticks on the controller.  </p>
           <h4>Professional Level</h4>
