--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
         p {
             text-align: center;
             text-indent: inherit;
+           
+        }
+        html{
+          background-color:  background-color: background: #36c;
+background: 
+linear-gradient(115deg, transparent 75%, rgba(255,255,255,.8) 75%) 0 0,
+linear-gradient(245deg, transparent 75%, rgba(255,255,255,.8) 75%) 0 0,
+linear-gradient(115deg, transparent 75%, rgba(255,255,255,.8) 75%) 7px -15px,
+linear-gradient(245deg, transparent 75%, rgba(255,255,255,.8) 75%) 7px -15px,
+#36c;
+background-size: 15px 30px  
+            
         }
     </style>
 
@@ -69,8 +81,7 @@
                 <h2>Photography Drones</h2>
                 <p>Photography drones are usually quadcopters. These quadcopters feature very nice cameras that stream live to the pilot's controller. Photography drones can range from prices of a few hundred dollars to thousands of dollars.</p>
                 &nbsp;
-                <button class="btn btn-primary btn-lg center-block" href="ConsumerDrones.html" role="button" id="singlebutton">Learn More</button>
-
+                <a class="btn btn-primary btn-lg center-block" href="ConsumerDrones.html" role="button" id="singlebutton">Learn More</a>
             </div>
             <div class="col-xs-1">
             </div>
@@ -91,7 +102,7 @@
                 <h2>Emergency Service Drones</h2>
                 <p>Drones have started being used in emergency situations. Drones have many benefits in the emergency service area because their ability to search large areas quickly and gain alternate perspectives. Drones are used in law enforcement, fire fighting, and search and rescue. </p>
                 &nbsp;
-                <button class="btn btn-primary btn-lg center-block" href="ConsumerDrones.html" role="button" id="singlebutton">Learn More</button>
+                <a class="btn btn-primary btn-lg center-block" href="Emercency_Service_Drones.html" role="button" id="singlebutton">Learn More</a>
             </div>
             <div class="col-xs-1">
             </div>
@@ -112,7 +123,7 @@
                 <p>
         Drones are being used in land surveying because they can preprogrammed to survey an area.  They can also fly the pattern needed for a highly detailed image relativly quickly.  The drones used for land surveying are usually fixed wing drones that look like a airplane.  </p>
                 &nbsp;
-                <button class="btn btn-primary btn-lg center-block" href="ConsumerDrones.html" role="button" id="singlebutton">Learn More</button>
+                <a class="btn btn-primary btn-lg center-block" href="Land_Surveying.html" role="button" id="singlebutton">Learn More</a>
             </div>
             <div class="col-xs-1">
             </div>
@@ -136,7 +147,7 @@
                 <h2>Military Drones</h2>
                <p>The military has many uses for drones.  They use drones to monitor areas</p>
                 &nbsp;
-                <button class="btn btn-primary btn-lg center-block" href="ConsumerDrones.html" role="button" id="singlebutton">Learn More</button>
+                <a class="btn btn-primary btn-lg center-block" href="Military_Drones.html" role="button" id="singlebutton">Learn More</a>
             </div>
             <div class="col-xs-1">
             </div>
