--- a/ConsumerDrones.html
+++ b/ConsumerDrones.html
@@ -13,7 +13,7 @@
   <div class="container">
     <ul class="nav navbar-nav">
       <li><a href="index.html">Home</a></li>
-      <li class="active"><a href="ConsumerDrones.html">Consumer Drones</a></li>
+      <li class="active"><a href="ConsumerDrones.html">Photography Drones</a></li>
       <li><a href="Emercency_Service_Drones.html">Emergency Service Drones</a></li>
         <li><a href="Land_Surveying.html">Land Surveying Drones</a></li> 
     <li><a href="Military_Drones.html">Military Drones</a></li>
@@ -145,7 +145,7 @@
         <div class="row">
             <div class="col-xs-6">
                 <h2>3DR and Yuneec </h2>
-                <p>3DSR and Yuneec both make some good drones.  These drones are also very capable but are unique in their own ways.  The Yuneec Typhoon H offers a 360 degree camera and the Yuneec Breeze is a cheaper, slightly less capable version of DJI's Mavic Pro.  Similarly 3DR's Solo is a cheaper drone for those who already own a GoPro.  All of these drones are good in their own way.</p>
+                <p>3DR and Yuneec both make some good drones.  These drones are also very capable but are unique in their own ways.  The Yuneec Typhoon H offers a 360 degree camera and the Yuneec Breeze is a cheaper, slightly less capable version of DJI's Mavic Pro.  Similarly 3DR's Solo is a cheaper drone for those who already own a GoPro.  All of these drones are good in their own way.</p>
              <table style="width:100%">
          <tr>
             <th>Drone</th>
