--- a/Land_Surveying.html
+++ b/Land_Surveying.html
@@ -23,7 +23,7 @@
     <ul class="nav navbar-nav">
       <li><a href="index.html">Home</a></li>
       
-      <li><a href="ConsumerDrones.html">Consumer Drones</a></li>
+      <li><a href="ConsumerDrones.html">Photography Drones</a></li>
       <li><a href="Emercency_Service_Drones.html">Emergency Service Drones</a></li>
         <li class="active"><a href="Land_Surveying.html">Land Surveying Drones</a></li> 
     <li><a href="Military_Drones.html">Military Drones</a></li>
