--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <li class="active"><a href="index.html">Home</a>
                 </li>
 
-                <li><a href="ConsumerDrones.html">Consumer Drones</a>
+                <li><a href="ConsumerDrones.html">Photography Drones</a>
                 </li>
                 <li><a href="Emercency_Service_Drones.html">Emergency Service Drones</a>
                 </li>
