--- a/Military_Drones.html
+++ b/Military_Drones.html
@@ -58,10 +58,10 @@
             <div class="col-xs-5">
             &#160;
               <h4>Reconaissance</h4>
-          <p></p>
+          <p>Reconaissance drones are very important in the military.  These drones dont risk a life and can survey an area so that military generals can formulate a battle plan.  </p>
             </div>
             <div class="col-xs-5">
-             <img align="left" src="" alt="" style="width:100%;height:100%;border: 30px;">
+             <img align="left" src="website_pics/MQ-8_tn.jpg" alt="" style="width:100%;height:100%;border: 30px;">
             </div>
                                                                                                                     
             <div class="col-xs-1">
