--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="col-xs-1">
             </div>
             <div class="col-xs-5">
-                <img align="left" src="website_pics/P3A.JPG" alt="Phantom 3 Advanced" style="width:100%;height:100%;border: 30px;">
+                <img align="left" src="website_pics/P3A_tn.jpg" alt="Phantom 3 Advanced" style="width:100%;height:100%;border: 30px;">
             </div>
             <div class="col-xs-5">
                 &nbsp;
@@ -87,7 +87,7 @@
             <div class="col-xs-1">
             </div>
             <div class="col-xs-5">
-                <img align="left" src="website_pics/inspire.jpg" alt="Inspire" style="width:100%;height:100%;border: 30px;">
+                <img align="left" src="website_pics/inspire_tn.jpg" alt="Inspire" style="width:100%;height:100%;border: 30px;">
             </div>
             <div class="col-xs-5">
                 &nbsp;
@@ -108,7 +108,7 @@
             <div class="col-xs-1">
             </div>
             <div class="col-xs-5">
-                <img align="left" src="website_pics/ebee" alt="E-Bee" style="width:100%;height:100%;border: 30px;">
+                <img align="left" src="website_pics/ebee_tn.jpg" alt="Ebee" style="width:100%;height:100%;border: 30px;">
             </div>
             <div class="col-xs-5">
                <h2>Land Surveying</h2>
@@ -132,7 +132,7 @@
             <div class="col-xs-1">
             </div>
             <div class="col-xs-5">
-                <img align="left" src="website_pics/MQ-9.jpg" alt="MQ-9" style="width:100%;height:100%;border: 30px;">
+                <img align="left" src="website_pics/MQ-9_tn.jpg" alt="MQ-9" style="width:100%;height:100%;border: 30px;">
             </div>
             <div class="col-xs-5">
               &nbsp;
