--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </div>
 
     <h2> What are Drones? </h2>
-    <p>Drones are unmanned aerial vehicles with GPS. There are many types of drones including photography, delivery, search and rescue, military and many more. </p>
+    <p>Drones are unmanned aerial vehicles with GPS. There are many types of drones including photography, search and rescue, military and many more. </p>
 
     <hr>
 
