--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/Drone_Website_Bootstrap.css">
     <style>
     </style>
-    <title> DRONES </title>
+    <title> Drones </title>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
         }
     </style>
 
-    <h1> DRONES </h1>
+    <h1>Drones</h1>
     <nav class="navbar navbar-default">
         <div class="container">
             <ul class="nav navbar-nav">
