--- a/Land_Surveying.html
+++ b/Land_Surveying.html
@@ -7,7 +7,7 @@
          href="css/Drone_Website_Bootstrap.css">
       <style>
       </style>
-      <title> DRONES </title>
+      <title> Drones </title>
    </head>
    <body>
       <style>
@@ -17,7 +17,7 @@
          }
      </style>
        
-        <h1> DRONES </h1>
+        <h1> Drones </h1>
        <nav class="navbar navbar-default">   
   <div class="container">
     <ul class="nav navbar-nav">
