--- a/Military_Drones.html
+++ b/Military_Drones.html
@@ -7,7 +7,7 @@
          href="css/Drone_Website_Bootstrap.css">
       <style>
       </style>
-      <title> DRONES </title>
+      <title> Drones </title>
    </head>
    <body>
       <style>
@@ -17,7 +17,7 @@
          }
      </style>
        
-        <h1> DRONES </h1>
+        <h1> Drones </h1>
       <nav class="navbar navbar-default">   
   <div class="container">
     <ul class="nav navbar-nav">
@@ -61,7 +61,7 @@
           <p>Reconaissance drones are very important in the military.  These drones don't risk a life and can survey an area so that military leaders can formulate a battle plan.  Reconaissance drones are also very usful because of their ability to asses damages.  These drones can asses damages of enemies or allies without risking a life.  Reconaissance drones can be equiped with many sensors and cameras such as thermal cameras and electro-optic sensors as well as a laser range finder.  These drones can also carry cameras with programs that can find mines or roadside bombs by using an extremly complex algorithm.    </p>
             </div>
             <div class="col-xs-5">
-             <img align="left" src="website_pics/MQ-8_tn.jpg" alt="" style="width:100%;height:100%;border: 30px;">
+             <img align="left" src="website_pics/MQ-8_tn.jpg" alt="MQ-8" style="width:100%;height:100%;border: 30px;">
             </div>
                                                                                                                     
             <div class="col-xs-1">
