--- a/ConsumerDrones.html
+++ b/ConsumerDrones.html
@@ -152,7 +152,9 @@
                     <h4>Buy Yuneec and 3DR</h4>
                     <hr> <a href="https://www.amazon.com/Yuneec-Collision-Avoidance-Hexacopter-Controller/dp/B01AT4BKFU/ref=sr_1_3?ie=UTF8&qid=1481205318&sr=8-3&keywords=yuneec+typhoon+h">Yuneec Typhoon H</a>
                     <hr> <a href="https://www.amazon.com/3DR-SA11A-Solo-Drone-Quadcopter/dp/B00ZPM7BOG/ref=sr_1_2?ie=UTF8&qid=1481205353&sr=8-2&keywords=3dr+solo">3DR Solo</a>
-                    <hr> </div>
+                    <hr> 
+                 <a href="https://www.amazon.com/Yuneec-Breeze-Flying-Camera-Definition/dp/B01LANE77M">Yuneec Breeze</a>
+                </div>
             </div>
         </div>
     </div>
