--- a/Land_Surveying.html
+++ b/Land_Surveying.html
@@ -30,8 +30,40 @@
             </ul>
         </div>
     </nav>
-    <h2>Land Surveying</h2>
-    <p>Recently, land surveying companies have started using drones for land surveying. Drones are very efficient for this job because they can be programeed to fly a set of waypoints and automatically take the pictures needed to create a 3D model of the area. This is a much easier process than the traditional way of using gps rovers to map an area because the drone can fly over preprogrammed path and create a map almost instantly after the flight. These drones save a lot of time. The drones used for land surveying are sometimes quadcopters but they can also be fixed wing airplane style drones. </p>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xs-1"> </div>
+            <div class="col-xs-10">
+                <h2>Land Surveying</h2>
+                <p>Somewhat recently, land surveying companies have started using drones for land surveying. Drones are very efficient for this job because they can be programmed to fly a set of waypoints and automatically take the pictures needed to create a 3D model of the area. This is a much easier process than the traditional way of using gps rovers to map an area because the drone can fly over preprogrammed path and create a map almost instantly after the flight. These drones save a lot of time. The drones used for land surveying are sometimes quadcopters but they can also be fixed wing airplane style drones. </p>
+            </div>
+            <div class="col-xs-1"> </div>
+        </div>
+    </div>
+    <hr>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xs-1"> </div>
+            <div class="col-xs-5"> &#160;
+                <h3>Quadcopter Style</h3>
+                <p>Quadcopter style surveying drones are mainly used when the drone needs to be used in multiple different ways.  Quadcopter style drones are much more versatile because they can be used for land surveying, photography, etc.  Quadcopters are less efficient for land surveying because they dont get around quite as quick as fixed wing drones do.  But, they do still get the job done.  These drones can still be preprogrammed so that they fly the mission autonomously.  They will even rutrn to your base station and land themselves. </p>
+            </div>
+            <div class="col-xs-5"> <img align="left" src="website_pics/drone-1538957_1920_tn.jpg" alt="Multirotor Surveying Drone" style="width:100%;height:100%;border: 30px;"> </div>
+            <div class="col-xs-1"> </div>
+        </div>
+    </div>
+    <hr>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xs-1"> </div>
+            <div class="col-xs-5"> &#160;
+                <h3>Fixed Wing Style</h3>
+                <p>Fixed wing style drones are much more efficient than quadcopter style drones.  Fixed wing drones use the power of lift to keep them in the air rather than four rotors working against gravity which uses much less energy to keep the drone in the air.  Fixed wing drones are also much faster than multirotor style drones.  These drones fly as fast as 56 mph and get the job done quick.  When the mission is done the drone will return and land in a designated landing zone that you position before the flight begins.</p>
+            </div>
+            <div class="col-xs-5"> <img align="left" src="website_pics/Ebeetransparent_tn.jpg" alt="Ebee" style="width:100%;height:100%;border: 30px;"> </div>
+            <div class="col-xs-1"> </div>
+        </div>
+    </div>
 </body>
 
 </html>
