--- a/ConsumerDrones.html
+++ b/ConsumerDrones.html
@@ -38,7 +38,6 @@
             <div class="col-xs-6">
                 <h2>DJI Series</h2>
                 <p>The DJI series of consumer drones are great drones for the novice or the pro. These drones range from $500 to $1500 but they contain many awesome features. Some of which include around 20 minute flight time, 0.5-4.3 mile range, and a 12 or 20 megapixel camera</p>
-                <p>The DJI series of consumer drones are great drones for the novice or the pro. These drones range from $500 to $1500 but they contain many awesome features. Some of which include around 25+ minute flight time, 0.5-4.3 mile range, and a 12 or 20 megapixel camera depending on the model.</p>
                 <hr>
                 <table style="width:100%">
                     <tr>
@@ -115,7 +114,7 @@
             <div class="row">
                 <div class="col-xs-6">
                     <h2>3DR and Yuneec </h2>
-                    <p>3DR and Yuneec both make some good drones. These drones are also very capable but are unique in their own ways. The Yuneec Typhoon H offers a 360 degree camera and the Yuneec Breeze is a cheaper, slightly less capable version of DJI's Mavic Pro. Similarly 3DR's Solo is a cheaper drone for those who already own a GoPro. All of these drones are good in their own way.</p>
+                    <p>3DR and Yuneec both make some good drones too. These drones are also very capable but are unique in their own ways. The Yuneec Typhoon H offers a 360 degree camera and the Yuneec Breeze is a cheaper, slightly less capable version of DJI's Mavic Pro. Similarly 3DR's Solo is a cheaper drone for those who already own a GoPro. All of these drones are good in their own way.</p>
                     <table style="width:100%">
                         <tr>
                             <th>Drone</th>
@@ -152,11 +151,10 @@
                     <h4>Buy Yuneec and 3DR</h4>
                     <hr> <a href="https://www.amazon.com/Yuneec-Collision-Avoidance-Hexacopter-Controller/dp/B01AT4BKFU/ref=sr_1_3?ie=UTF8&qid=1481205318&sr=8-3&keywords=yuneec+typhoon+h">Yuneec Typhoon H</a>
                     <hr> <a href="https://www.amazon.com/3DR-SA11A-Solo-Drone-Quadcopter/dp/B00ZPM7BOG/ref=sr_1_2?ie=UTF8&qid=1481205353&sr=8-2&keywords=3dr+solo">3DR Solo</a>
-                    <hr> 
-                 <a href="https://www.amazon.com/Yuneec-Breeze-Flying-Camera-Definition/dp/B01LANE77M">Yuneec Breeze</a>
-                </div>
+                    <hr> <a href="https://www.amazon.com/Yuneec-Breeze-Flying-Camera-Definition/dp/B01LANE77M">Yuneec Breeze</a> </div>
             </div>
         </div>
     </div>
-    </body>
+</body>
+
 </html>
