--- a/Land_Surveying.html
+++ b/Land_Surveying.html
@@ -46,7 +46,7 @@
             <div class="col-xs-1"> </div>
             <div class="col-xs-5"> &#160;
                 <h3>Quadcopter Style</h3>
-                <p>Quadcopter style surveying drones are mainly used when the drone needs to be used in multiple different ways.  Quadcopter style drones are much more versatile because they can be used for land surveying, photography, etc.  Quadcopters are less efficient for land surveying because they dont get around quite as quick as fixed wing drones do.  But, they do still get the job done.  These drones can still be preprogrammed so that they fly the mission autonomously.  They will even rutrn to your base station and land themselves. </p>
+                <p>Quadcopter style surveying drones are mainly used when the drone needs to be used in multiple different ways. Quadcopter style drones are much more versatile because they can be used for land surveying, photography, etc. Quadcopters are less efficient for land surveying because they dont get around quite as quick as fixed wing drones do. But, they do still get the job done. These drones can still be preprogrammed so that they fly the mission autonomously. They will even return to your base station and land themselves automatically. </p>
             </div>
             <div class="col-xs-5"> <img align="left" src="website_pics/drone-1538957_1920_tn.jpg" alt="Multirotor Surveying Drone" style="width:100%;height:100%;border: 30px;"> </div>
             <div class="col-xs-1"> </div>
@@ -58,7 +58,7 @@
             <div class="col-xs-1"> </div>
             <div class="col-xs-5"> &#160;
                 <h3>Fixed Wing Style</h3>
-                <p>Fixed wing style drones are much more efficient than quadcopter style drones.  Fixed wing drones use the power of lift to keep them in the air rather than four rotors working against gravity which uses much less energy to keep the drone in the air.  Fixed wing drones are also much faster than multirotor style drones.  These drones fly as fast as 56 mph and get the job done quick.  When the mission is done the drone will return and land in a designated landing zone that you position before the flight begins.</p>
+                <p>Fixed wing style drones are much more efficient than quadcopter style drones. Fixed wing drones use the power of lift to keep them in the air rather than four rotors working against gravity which uses much less energy to keep the drone in the air. Fixed wing drones are also much faster than multirotor style drones. These drones fly as fast as 56 mph and get the job done quick. When the mission is done the drone will return and land in a designated landing zone that you position before the flight begins.</p>
             </div>
             <div class="col-xs-5"> <img align="left" src="website_pics/Ebeetransparent_tn.jpg" alt="Ebee" style="width:100%;height:100%;border: 30px;"> </div>
             <div class="col-xs-1"> </div>
