--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="col-xs-5"> <img align="left" src="website_pics/inspire_tn.jpg" alt="Inspire" style="width:100%;height:100%;border: 30px;"> </div>
             <div class="col-xs-5"> &nbsp;
                 <h2>Emergency Service Drones</h2>
-                <p>Drones have started being used in emergency situations. Drones have many benefits in the emergency service area because their ability to search large areas quickly and gain alternate perspectives. Drones are used in law enforcement, firefighting, and search and rescue. </p> &nbsp; <a class="btn btn-primary btn-lg center-block" href="Emercency_Service_Drones.html" role="button" id="singlebutton">Learn More</a> </div>
+                <p>Drones have started being used in emergency situations. Drones have many benefits in the emergency service area. They have the ability to search large areas quickly and gain alternate perspectives. Drones are used in law enforcement, firefighting, and search and rescue. </p> &nbsp; <a class="btn btn-primary btn-lg center-block" href="Emercency_Service_Drones.html" role="button" id="singlebutton">Learn More</a> </div>
             <div class="col-xs-1"> </div>
         </div>
     </div>
@@ -69,7 +69,7 @@
             <div class="col-xs-5"> <img align="left" src="website_pics/ebee_tn.jpg" alt="Ebee" style="width:100%;height:100%;border: 30px;"> </div>
             <div class="col-xs-5">
                 <h2>Land Surveying</h2>
-                <p> Drones are being used in land surveying because they can be preprogrammed to survey an area. They can also fly the pattern needed for a highly detailed image relativly quickly. The drones used for land surveying are usually fixed wing drones that look like a airplane. </p> &nbsp; <a class="btn btn-primary btn-lg center-block" href="Land_Surveying.html" role="button" id="singlebutton">Learn More</a> </div>
+                <p> Drones are being used in land surveying because they can be preprogrammed to survey an area. They can also fly the pattern needed for a highly detailed image relatively quickly. The drones used for land surveying are usually fixed wing drones that look like a airplane. </p> &nbsp; <a class="btn btn-primary btn-lg center-block" href="Land_Surveying.html" role="button" id="singlebutton">Learn More</a> </div>
             <div class="col-xs-1"> </div>
         </div>
     </div>
@@ -80,12 +80,10 @@
             <div class="col-xs-5"> <img align="left" src="website_pics/MQ-9_tn.jpg" alt="MQ-9" style="width:100%;height:100%;border: 30px;"> </div>
             <div class="col-xs-5"> &nbsp;
                 <h2>Military Drones</h2>
-                <p>The military has many uses for drones. They use drones to monitor areas, and launch airstrikes. Military drones have a huge advanantage over traditional planes because a life can't be lost if it is shot down. </p> &nbsp; <a class="btn btn-primary btn-lg center-block" href="Military_Drones.html" role="button" id="singlebutton">Learn More</a> </div>
+                <p>The military has many uses for drones. They use drones to monitor areas, plan attacks, and launch airstrikes. Military drones have a huge advanantage over traditional planes because a life can't be lost if it is shot down. </p> &nbsp; <a class="btn btn-primary btn-lg center-block" href="Military_Drones.html" role="button" id="singlebutton">Learn More</a> </div>
             <div class="col-xs-1"> </div>
         </div>
     </div>
-    <hr> 
-    
-    </body>
+    <hr> </body>
 
 </html>
