--- a/Military_Drones.html
+++ b/Military_Drones.html
@@ -46,7 +46,7 @@
             <div class="col-xs-1"> </div>
             <div class="col-xs-5"> &#160;
                 <h3>Reconaissance</h3>
-                <p>Reconaissance drones are very important in the military. These drones don't risk a life and can survey an area so that military leaders can formulate a battle plan. Reconaissance drones are also very usful because of their ability to asses damages. These drones can asses damages of enemies or allies without risking a life. Reconaissance drones can be equiped with many sensors and cameras such as thermal cameras and electro-optic sensors as well as a laser range finder. These drones can also carry cameras with programs that can find mines or roadside bombs by using an extremly complex algorithm. </p>
+                <p>Reconaissance drones are very important in the military. These drones don't risk a life and can survey an area so that military leaders can formulate a battle plan. Reconaissance drones are also very useful because of their ability to asses damages. These drones can assess damages of enemies or allies without risking a life. Reconaissance drones can be equipped with many sensors and cameras such as thermal cameras and electro-optic sensors as well as a laser range finder. These drones can also carry cameras with programs that can find mines or roadside bombs by using an extremly complex algorithm. </p>
             </div>
             <div class="col-xs-5"> <img align="left" src="website_pics/MQ-8_tn.jpg" alt="MQ-8" style="width:100%;height:100%;border: 30px;"> </div>
             <div class="col-xs-1"> </div>
@@ -58,7 +58,7 @@
             <div class="col-xs-1"> </div>
             <div class="col-xs-5"> &#160;
                 <h3>Combat</h3>
-                <p>Drones are a major asset for military combat missions. These drones can carry missiles, bombs, etc. The drones are controlled from a control station that can be anywhere because the operator and the drone are connected by satellites. These drones are used in the military now but they aren't perfected yet. They still crash quite often and require a lot of maintenance. Drones are the future of warfare though and they will become better and better over time. </p>
+                <p>Drones are a major asset for military combat missions. These drones can carry missiles, bombs, etc. The drones are controlled from a control station that can be anywhere because the operator and the drone are connected by satellites. These drones are used in the military now but they aren't perfected yet. They still crash quite often and require a lot of maintenance. Drones are the future of warfare though, and they will become much better over time. </p>
             </div>
             <div class="col-xs-5"> <img align="left" src="website_pics/MQ-9_Reaper_2_tn.jpg" alt="" style="width:100%;height:100%;border: 30px;"> </div>
             <div class="col-xs-1"> </div>
